# corelab

./: .gitignore  PRD.md  index.html  memory_bank.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/memory/: index.ts
apps/memory/views/: MemoryApp.css  MemoryApp.tsx  PersonDetail.tsx  PersonList.tsx
core/: Cargo.toml  corelab.db  tauri.conf.json
core/src/: commands.rs  lib.rs  main.rs
core/src/modules/: ai.rs  database.rs  events.rs  mod.rs  registry.rs
src/: App.tsx
src/components/: Shell.css  Shell.tsx  TabNav.tsx
src/lib/: api.ts
src/styles/: globals.css
